<resources>
    <string name="app_name">Rowing Mate</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_menu_bar">Menu</string>
    <string name="user_name">Piotr</string>
    <string name="user_level">Początkujący</string>
    <string name="motywacja">Motywacja</string>
    <string name="zaplanuj">Zaplanuj trening</string>
    <string name="dodaj">Dodaj wynik</string>
    <string name="zrealizowane">Moje wyniki</string>
    <string name="dane">Moje dane</string>
    <string-array name="two_types">
        <item>Na wodzie</item>
        <item>Erogmetr</item>
    </string-array>
    <string-array name="time_types">
        <item>10-30</item>
        <item>30-60</item>
        <item>>60</item>
    </string-array>
    <string-array name="typ_types">
        <item>Wytrwałość</item>
        <item>Moc</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zaplanuj_trening">Zaplanuj trening</string>
    <string name="dodaj_wynik_treningu">Dodaj wynik treningu</string>
    <string name="moje_wyniki">Moje wyniki</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="dotknij_by_zacz">Dotknij by zacząć</string>
    <string name="rowing_mate">Rowing Mate</string>
    <string name="created_by">created by Volodymyr Vaskovych</string>
    <string name="sposob_treningu">Sposób treningu</string>
    <string name="data_treningu">Data treningu</string>
    <string name="czas">Czas</string>
    <string name="moc">Moc</string>
    <string name="tempo">Tempo</string>
    <string name="dystans">Dystans (m)</string>
    <string name="sortuj">Sortuj</string>
    <string name="sposob_treningu2">Sposób treningu</string>
    <string name="data_treningu2">Data treningu</string>
    <string name="dystans_treningu">Dystans treningu</string>
    <string name="czas_treningu">Czas treningu (min)</string>
    <string name="moc_treningu">Moc treningu</string>
    <string name="tempo_treningu">Tempo treningu</string>
    <string name="wyniki">Wyniki</string>
    <string name="moje_dane">Moje dane</string>
    <string name="imie">Imie</string>
    <string name="poziom">Poziom</string>
    <string name="zapisz">Zapisz</string>
    <string name="poziom1">Początkujący</string>
    <string name="poziom2">Amator</string>
    <string name="poziom3">Zaawansowany</string>
    <string name="poziom4">Mistrz</string>
    <string name="author">Application was created and designed by Volodymyr Vaskovych</string>
    <string name="lokalizacja">Moja lokalizacja</string>
</resources>
