<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.vvaskovy.rowingmate.MenuBar"
    tools:showIn="@layout/app_bar_menu_bar"
    android:background="@drawable/rm"
    android:id="@+id/container">


    <Button
        android:layout_width="145pt"
        android:layout_height="wrap_content"
        android:background="@drawable/my_buttons_bg"
        android:text="@string/zaplanuj_trening"
        android:layout_marginTop="20pt"
        android:layout_marginLeft="15pt"
        android:id="@+id/menu_bt1"
        />

    <Button
        android:layout_width="145pt"
        android:layout_height="wrap_content"
        android:background="@drawable/my_buttons_bg"
        android:text="@string/dodaj_wynik_treningu"
        android:layout_marginTop="60pt"
        android:layout_marginLeft="15pt"
        android:id="@+id/menu_bt2"
        />


    <Button
        android:layout_width="145pt"
        android:layout_height="wrap_content"
        android:background="@drawable/my_buttons_bg"
        android:text="@string/moje_wyniki"
        android:layout_marginTop="190pt"
        android:layout_marginLeft="15pt"
        android:id="@+id/menu_bt3"
        />

    <Button
        android:layout_width="145pt"
        android:layout_height="wrap_content"
        android:background="@drawable/my_buttons_bg"
        android:text="@string/ustawienia"
        android:layout_marginTop="230pt"
        android:layout_marginLeft="15pt"
        android:id="@+id/menu_bt4"
        />
</RelativeLayout>
